--- a/FF.html
+++ b/FF.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Female Faces</title>
+  <head>
     <link rel="stylesheet" href="FF.css">
-</head>
-<body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">F<span class="pilowtext2">e</span><span class="pilowtext1">M</span>ale Fa<span class="pilowtext">c</span>es</div>
-            <ul>
-                <li><button class="buttonSUP">Support us</button></li>
-            </ul>
-        </nav>
-    </header>
-
+    <title>Home - Female Faces</title>
     
+  </head>
+  <body>
+
+    <div class="container">
+      <div class="navbar">
+        <div class="logo">Female Faces</div>
+        <ul>
+            <li><button class="Supbut">Support us</button></li>
+        </ul>
+      </div>
+  
+    <!-- Menu Section -->
+     <div class="container2">
+        <div class="menu"></div>
+     </div>
+
+
+     <!-- Hero Secction -->
+     <div class="container3">
+        <div class="hero">
+          <h1>
+            CONCEPTUALIZED BY
+            DIVERSE DIRECTORS
+          </h1>
+        </div>
+     </div>
+     </div>
+
+
+
 </body>
 </html>
