--- a/FF.html
+++ b/FF.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="FF.css">
     <title>Home - Female Faces</title>
-    
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
   </head>
   <body>
 
@@ -30,7 +30,20 @@
           </h1>
         </div>
      </div>
+
+     <div class="container4">
+      <div class="heroP">
+        <p>
+          Female Faces is a project addressing women's rights 
+          through a series of female video portraits created by 
+          directors and composers from across the globe.
+        </p>
+      </div>
      </div>
+
+
+     </div>
+
 
 
 
