--- a/FF.html
+++ b/FF.html
@@ -46,6 +46,12 @@
         <h1 class="scrolltext">Scroll Down</h1>
       </div>
 
+      <div class="container6">
+        <div class="both1">
+        <h1 class="selh1">Select Movies</h1>
+        </div>  
+      </div>
+
      </div>
 
 
